[package]
name = "cfg-iif"
version = "0.2.6"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
A macro for defining `#[cfg]` `if-else` functions.
"""
keywords = ["cfg", "macro"]
#categories = ["devel-utils"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"
repository = "https://github.com/aki-akaguma/cfg-iif"

[dependencies]

[features]

# for tests
has_abc = []
